[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" path="res://scripts/test/test_runner.gd" id="1_0xqxq"]

[node name="TestRunner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xqxq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hot Dog Idle Game - Test Runner"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RunAllTestsButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Run All Tests"

[node name="RunEconomyTestsButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Run Economy Tests"

[node name="RunProductionTestsButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Run Production Tests"

[node name="ClearResultsButton" type="Button" parent="VBoxContainer/Controls"]
layout_mode = 2
text = "Clear Results"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResultsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsLabel" type="Label" parent="VBoxContainer/ResultsContainer"]
layout_mode = 2
text = "Test Results:"
horizontal_alignment = 1

[node name="ResultsText" type="RichTextLabel" parent="VBoxContainer/ResultsContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "No tests run yet. Click 'Run All Tests' to start testing."

[node name="StatusBar" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready"
horizontal_alignment = 1 